--- a/src/app.html
+++ b/src/app.html
@@ -8,5 +8,25 @@
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
+		<style>
+			@font-face {
+				font-family: 'Inter';
+				src: url(/fonts/Inter-Regular.woff2) format('woff2');
+				font-weight: normal;
+			}
+			@font-face {
+				font-family: 'Inter';
+				src: url(/fonts/Inter-Bold.woff2) format('woff2');
+				font-weight: bold;
+			}
+			html, body {
+				padding: 0;
+				margin: 0;
+				font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+				color: #333;
+				width: 100%;
+				height: 100%;
+			}
+		</style>
 	</body>
 </html>
